--- a/docs/release_notes/v0.3.0.md
+++ b/docs/release_notes/v0.3.0.md
@@ -1,2 +1,2 @@
 
-Reverted shellcheck version to 0.7.0 to resolve the issue of additional dependencies.
+Locked shellcheck version used in the shell-linter action to v0.7.0 instead of latest. This allows for more control over the state of the action by avoiding possible instabilities and dependency issues that may come with latest versions. 
